# chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp  position_struct.h
board/: board.cpp  board.h  board_test.cpp  board_test.h  board_test_cases.h  test_script.cpp
game/: game.cpp  game.h
game_exception/: game_exception.cpp  game_exception.h
king_state/: king_state.cpp  king_state.h
move_validator/: move_validator.cpp  move_validator.h
path_validator/: path_validator.cpp  path_validator.h
piece/: piece.cpp  piece.h  piece_test.h
piece/bishop/: CMakeLists.txt  a.out  bishop.cpp  bishop.h  bishop_test.cpp  build_test.sh
piece/king/: CMakeLists.txt  build_test.sh  king_piece.cpp  king_piece.h  king_test.cpp  king_test.h
piece/knight/: CMakeLists.txt  a.out  build_test.sh  knight.cpp  knight.h  knight_test.cpp
piece/pawn/: CMakeLists.txt  pawn.cpp  pawn.h  pawn_test.cpp
piece/queen/: CMakeLists.txt  a.out  build_test.sh  queen.cpp  queen.h  queen_test.cpp
piece/rock/: CMakeLists.txt  a.out  build_test.sh  rock.cpp  rock.h  rock_test.cpp
piece_path/: piece_path.cpp  piece_path.h
player/: player.cpp  player.h
position_validator/: position_validator.cpp  position_validator.h
square/: square.cpp  square.h
test_class/: failing_test.h  successfull_test.h  test.h
